--- a/azure-pipelines/jobs/bicep.yml
+++ b/azure-pipelines/jobs/bicep.yml
@@ -7,6 +7,11 @@ jobs:
         displayName: Run Bicep Linter
         name: LintBicepCode
 
+  - template: create_resourceGroup.yml
+    parameters:
+      resourceGroupName: django_rg
+      azureSubscription: $(azureSubscription)
+
   - job: validateBicepCode
     continueOnError: false
     displayName: Validate Bicep code
