fix path to create_rg.yml

--- a/azure-pipelines/jobs/bicep.yml
+++ b/azure-pipelines/jobs/bicep.yml
@@ -7,7 +7,7 @@ jobs:
         displayName: Run Bicep Linter
         name: LintBicepCode
 
-  - template: create_resourceGroup.yml
+  - template: steps/create_rg.yml
     parameters:
       resourceGroupName: django_rg
       azureSubscription: $(azureSubscription)
