set default value vor location parameter

--- a/azure-pipelines/jobs/steps/create_rg.yml
+++ b/azure-pipelines/jobs/steps/create_rg.yml
@@ -8,6 +8,7 @@ parameters:
   - name: location
     displayName: Resourcegroup Location
     type: string
+    default: 'westeurope'
 
 steps:
   - task: AzureCLI@2
